# ODV_VDrift

./: .env  .gitignore  Dockerfile  Dockerfile.base  Readme.md  build.sh  docker-compose-ubuntu.yml  docker-compose.yml  init.sh  openVDrift.cpp
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: ODV_Vdrift.language.settings.xml  app.1520356123778.pdom
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/app/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/app/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 5.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/: segments_1
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2018/3/10/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.elias-home_1007/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.elias-home_1007/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.elias-home_1007/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
app/: .gitignore  CMakeLists.txt  main.cpp  main.sh  messages.odvd  openVDrift.cpp  sdl2-config.cmake
app/config/: configuration
app/lib/: cluon_handler.cpp  cluon_handler.h
app/lib/_vdrift/: CMakeLists.txt  cargraphics.cpp  definitions.h  eventsystem.h  game.cpp  game.h  inputgraph.h  loadcamera.cpp  pathmanager.cpp  performance_testing.cpp  settings.h  trackloader.cpp  trackloader.h  vdrift.cpp  vdrift.h
app/lib/_vdrift/cfg/: config.php  ptree.h
app/lib/_vdrift/graphics/: model_obj.cpp
app/lib/_vdrift/physics/: cardynamics.cpp  cardynamics.h  motionstate.h
app/lib/_vdrift_data/skins/simple/menus/: Cars  Tracks
app/lib/_vdrift_data/tracks/circle/: about.txt  surfaces.txt  track.txt
app/lib/_vdrift_data/tracks/circle/objects/: circle.blend  list.txt  objects-r.jpk  objects.jpk
app/lib/vdrift/: .travis.yml  SConstruct  vdrift.appdata.xml
app/lib/vdrift/data/test/: cars
app/lib/vdrift/docs/: 3D_modeling.md  About_the_project.md  Adding_video_modes.md  Authors_and_contributors.md  Car_files_and_formats.md  Car_graphics.md  Car_parameters.md  Car_sounds.md  Coding_guidelines.md  Compiling.md  Config_file_format.md  Configuring_the_controls.md  Configuring_the_display.md  Configuring_the_sound.md  Creating_cars.md  Creating_tracks.md  Data_directory.md  Debugging.md  Downloading.md  Drift_scoring.md  Drifting_techniques.md  Enabling_force_feedback_in_kernel.md  Getting_cars.md  Getting_the_development_version.md  Getting_tracks.md  Importing_Racer_tracks.md  Installing.md  JOEPack_format.md  JOE_format.md  Listedit_tool.md  Logitech_G25_support.md  Main_page.md  Menu_system.md  Numerical_integration.md  Options_config.md  Packaging.md  Replays.md  Reporting_problems.md  Requirements.md  Setting_up_force_feedback.md  (+9 more)
app/lib/vdrift/src/: main.cpp
app/lib/vdrift/src/gui/: guislider.h
app/lib/vdrift/tools/cars/: blank.car
config/: messages.odvd
model/opendlv.lynx/: CMakeLists.txt
model/opendlv.lynx/cmake.Modules/: CheckCxxTestEnvironment.cmake
model/opendlv.lynx/code/sim-lynx/: CMakeLists.txt
model/opendlv.lynx/code/sim-lynx/bicyclemodel/: CMakeLists.txt
model/opendlv.lynx/code/sim-lynx/bicyclemodel/app/: opendlv-sim-lynx-bicyclemodel.cpp
model/opendlv.lynx/code/sim-lynx/bicyclemodel/include/: bicyclemodel.hpp
model/opendlv.lynx/code/sim-lynx/bicyclemodel/src/: bicyclemodel.cpp
model/opendlv.lynx/resource/odvd/: ODVDcfsd18.odvd
opendlv.core/resources/can/: fh16gw.dbc  logsnippet.asc
opendlv.core/resources/odvd/: ODVDOpenDLVStandardMessageSet.odvd
opendlv.core/usecases/latest/test-imu/: docker-compose.yml
runs/: 1_1.sres  1_2.sres  1_3.sres  1_4.sres  1_5.sres  1_6.sres  1_7.sres  ga.run  ga_prev.run  mc.run  mc_prev.run
test_cases/: 1.path  2.path  scenarios
tests/input/: CMakeLists.txt  main.cpp  main_t.cpp
tests/path/: CMakeLists.txt  main.cpp
tests/path/includes/: dtw.h  test_case.h  test_error.h  test_result.h  test_run.h  test_scenario.h  update_car.h
tests/path/paths/: path_1.path
tests/path/src/: main.cpp  main_t.cpp  test_error.cpp  test_run.cpp  test_scenario.cpp  update_car.cpp
